# python-p1monitor

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  test_output.py
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: codeql.yaml  labels.yaml  linting.yaml  lock.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  requirements.txt  stale.yaml  sync-labels.yaml  tests.yaml  tweet-release.yaml  typing.yaml
examples/: phases.py  settings.py  smartmeter.py  test_output.py  watermeter.py
p1_monitor/: __init__.py  exceptions.py  models.py  p1_monitor.py
p1monitor/: __init__.py  exceptions.py  models.py  p1monitor.py
src/p1monitor/: __init__.py  exceptions.py  models.py  p1monitor.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_models.py  test_p1monitor.py
tests/__snapshots__/: test_models.ambr
tests/fixtures/: phases.json  settings.json  smartmeter.json  watermeter.json
