[tool.poetry]
name = "p1monitor"
version = "0.0.0"
description = "Asynchronous Python client for the P1 Monitor"
authors = ["Klaas Schoute <hello@student-techlife.com>"]
maintainers = ["Klaas Schoute <hello@student-techlife.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/klaasnicolaas/python-p1monitor"
repository = "https://github.com/klaasnicolaas/python-p1monitor"
documentation = "https://github.com/klaasnicolaas/python-p1monitor"
keywords = ["p1", "monitor", "power", "energy", "api", "async", "client"]
classifiers = [
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "p1monitor" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = ">=3.0.0"
yarl = ">=1.6.0"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.4"
black = "^21.8b0"
blacken-docs = "^1.11.0"
flake8 = "^3.8.4"
flake8-docstrings = "^1.5.0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.0.1"
pylint = "^2.10.2"
yamllint = "^1.26.2"
pyupgrade = "^2.25.0"
flake8-simplify = "^0.14.0"
vulture = "^2.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.6.1"
flake8-eradicate = "^1.1.0"
flake8-markdown = "^0.2.0"
darglint = "^1.7.0"
safety = "^1.10.3"
codespell = "^2.1.0"
bandit = "^1.7.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/klaasnicolaas/python-p1monitor/issues"
Changelog = "https://github.com/klaasnicolaas/python-p1monitor/releases"

[tool.black]
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.DESIGN]
max-attributes=20

[tool.vulture]
min_confidence = 80
paths = ["p1monitor"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
